fix listing page spacing

--- a/src/containers/ListingPage/ListingPage.css
+++ b/src/containers/ListingPage/ListingPage.css
@@ -17,7 +17,8 @@
   min-height: 35px;
   width: 140px;
   font-size: 16px;
-  margin-top: 8px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .errorText {
